# YKSConverter

./: .gitignore  ByteBuffer.h  CMakeLists.txt  LICENSE  README.md  YKSConverter.h  cpp_output.hex  rust_output.hex  test3_readme_example.midi  test4_empty_tracks.midi
.claude/: settings.local.json
.github/workflows/: ci.yml  publish.yml
MF2TT2MF/: MF2TT2MF.h  TrackBuilder.hpp  TrackEvent.cpp  TrackEvent.h
YKSConverter/: ByteBuffer.cpp  ByteBuffer.h  YKSConverter.cpp  YKSConverter.h
YKSConverter/MF2TT2MF/: MF2TT2MF.cpp  MF2TT2MF.h  TrackBuilder.cpp  TrackBuilder.h
cpp/: CMakeLists.txt  README.md  test_baseline.cpp
cpp/YKSConverter/: ByteBuffer.h  YKSConverter.h
cpp/YKSConverter/MF2TT2MF/: MF2TT2MF.cpp  TrackEvent.h
docs/: CLAUDE.md  MML_SPEC.md  PORTING_NOTES.md
rust/: Cargo.toml  README.md  rust_baseline_output.txt  test2_multi_track_rust.midi
rust/src/: constants.rs  errors.rs  lib.rs  main.rs  mf2tt2mf.rs  track_builder.rs  track_event.rs  yks_converter.rs
scripts/: compare_outputs.sh  test_input.mml
yks-converter-rust/: Cargo.toml  test3_readme_example_rust.midi
yks-converter-rust/src/: byte_buffer.rs
