[package]
name = "yks_converter"
version = "0.1.0"
edition = "2021"
authors = ["YKSConverter Contributors"]
description = "A Rust library for converting MML (Music Macro Language) to MIDI format"
readme = "README.md"
homepage = "https://github.com/rajephon/YKSConverter"
repository = "https://github.com/rajephon/YKSConverter"
license = "BSD-2-Clause"
keywords = ["midi", "mml", "music", "converter", "audio"]
categories = ["multimedia::audio", "parsing"]
exclude = [
    "rust_baseline_output.txt",
    "*.midi"
]

[dependencies]
regex = "1.10"
byteorder = "1.5"

[lib]
name = "yks_converter"
crate-type = ["lib"]

[[bin]]
name = "test_baseline"
path = "src/bin/test_baseline.rs"
